  H2Database.runScript() updated according to H2 api changes
  H2Database, in memory database initialization moved from static initializer to constructor
  TextInputPanel now JTextField based
  HostMonitor and HostMonitorPanel, improved server discovery
  EntityConnectionServerAdmin.restart() added
  ServerMonitor, ServerMonitorPanel, restart action added
  DefaultEntityConnectionServerAdmin.adminInstance removed
  DefaultEntityConnectionServerAdmin.startServer() refactored
  NavigableImagePanel moved to framework.plugins.imagepanel
  H2Database bug fixed, no longer tries to initialize a file based embedded database if the database file exists
  H2Database, database url bug fixed
  EntityApplicationPanel.getUser() now handles null or empty framCaption
  EntityConnectionUtil.copyEntities() bug fixed, did not clear primary key values correctly before insert
  IncrementKeyGenerator now behaves like the SequenceGenerator, skips the id generation if a value is present
  EntityConnection.selectPropertyValues() replaced by selectValues()
0.9.5 [incompatible api: CriteriaSet, SimpleCriteria]
  CriteriaSet changed to an interface, CriteriaUtil.DefaultCriteriaSet added, SimpleCriteria moved to CriteriaUtil.StringCriteria, factory methods added to CriteriaUtil
  EntityConnectionProviders.createConnectionProvider() renamed to connectionProvider()
  EntityConnectionProviders.connectionProvider(EntityConnection) added
  EntityTablePanel.createStaticEntityTablePanel(), resulting panel is now read-only and without popup menu and south panel
  CriteriaUtil.DefaultStringCriteria.writeObject() and readObject() implemented, tested
  UiUtil, component returned from configuration methods
  PropertySummaryModel moved to common.table package and renamed ColumnSummaryModel, implementation as well
  EntityTableModel.SummaryValueProvider moved to AbstractFilteredTableModel.DefaultColumnValueProvider
  EntityTablePanel.summaryPanel moved to FilteredTablePanel