@@ -4062,3 +4062,4 @@
   PropertySummaryModel moved to common.table package and renamed ColumnSummaryModel, implementation as well
   EntityTableModel.SummaryValueProvider moved to AbstractFilteredTableModel.DefaultColumnValueProvider
   EntityTablePanel.summaryPanel moved to FilteredTablePanel
+  H2Database.initializeDatabase() bug fixed, only tries to initialize an embedded database if it is required
